Tue Feb 15 12:57:05 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c server/gam_subscription.[ch]: cleaning up
	  the server code, a number of bug fixes
	* python/tests/Makefile.am python/tests/*.py: adding a bunch of
	  new tests

Fri Feb 11 14:39:16 CET 2005 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in python/Makefile.am python/gamin.c python/gamin.py:
	  fixed #167064 renaming gaminmod to _gamin
	* python/tests/Makefile.am: make sure the PYTHONPATH includes
	  libgamin subdirs

Fri Feb 11 12:34:39 CET 2005 Daniel Veillard <veillard@redhat.com>

	* python/gamin.py: fixing a bug in the bindings
	* python/tests/Makefile.am python/tests/multiple.py: added a test
	  for multiple monitors watching the same resource.

Thu Feb 10 23:49:42 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c server/local_inotify.h: applied 
	  inotify-0.19 patch from John McCutchan 

Tue Feb  8 14:40:49 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/*: added a new page differences.html giving details
	  about the differences and extensions between FAM and gamin.

Tue Feb  8 11:24:00 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS doc/gamin.html doc/news.html gamin.spec.in: finishing
	  release of 0.0.23
	* python/gamin.py: rolling back the chnge to the bindings,
	  since it made python bindings semantic diverge from the C
	  level with risk of recursion problems.

Mon Feb  7 18:34:25 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in: preparing 0.0.23
	* libgamin/fam.h libgamin/gam_api.c libgamin/gam_data.c 
	  libgamin/gam_data.h libgamin/gam_protocol.h
	  libgamin/gamin_sym.version: adding defines and an API to
	  avoid Exists and EndExists events being generated,
	  also avoid pushing those in case of reconnect
	* server/gam_connection.c server/gam_subscription.[ch]:
	  this impacts also the server part a bit
	* python/gamin.c python/gamin.py: added the API at the
	  server level.