@@ -7,7 +7,7 @@ nb_callbacks=0
 
 def callback(path, event):
     global nb_callbacks
-    print "Got callback: %s, %s" % (path, event)
+#    print "Got callback: %s, %s" % (path, event)
     nb_callbacks = nb_callbacks + 1
 
 mon = gamin.WatchMonitor()
@@ -15,7 +15,6 @@ mon.watch_directory(".", callback)
 time.sleep(1)
 ret = mon.event_pending()
 if ret > 0:
-    ret = mon.handle_one_event()
     ret = mon.handle_events()
 mon.stop_watch(".")
 mon.disconnect()
